--- a/pages/login.html
+++ b/pages/login.html
@@ -34,6 +34,10 @@
                         <button class="login" onclick="signIn()">Login</button>
 
                         <p style="color: #2e2e2e; margin-top: 3%;">Login with Socials</p>
+                        <label class="switch">
+                            <input type="checkbox" checked>
+                            <span class="slider round"></span>
+                          </label>
 
                         <div class="row" style="margin-top: 6%; margin-left: 22%;">
                             <button class="social-button">Facebook</button>
