--- a/pages/farmerDashboard.html
+++ b/pages/farmerDashboard.html
@@ -125,70 +125,70 @@
 
         <!--News-->
 
-        <div class="right">
+<div class="right">
+
+    <div class="d-flex justify-content-center">
+        <div class="right-box">
 
             <div class="d-flex justify-content-center">
-                <div class="right-box">
-
-                    <div class="d-flex justify-content-center">
-                        <div class="col">
+                <div class="col">
+                    <center>
+                        <h1 style="color: white; margin-top: 10%;">JD Farms</h1>
+                        <div style="height: 20px;"></div>
+                        <div class="small-box">
                             <center>
-                                <h1 style="color: white; margin-top: 10%;">Subway</h1>
-                                <div style="height: 20px;"></div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="small-box">
-                                    <center>
-                                        <h5 style="color: white;">15k</h5>
-                                        <p style="color: #616161;">Average income</p>
-                                    </center>
-                                </div>
-                                <div class="col">
-                                    <button class="view">View Contracts</button>
-                                    <button class="create">Create Contract</button>
-                                </div>
-
+                                <h5 style="color: white;">$1,192</h5>
+                                <p style="color: #616161;">Total Earned</p>
                             </center>
                         </div>
-                    </div>
+                        <div class="small-box">
+                            <center>
+                                <h5 style="color: white;">$592</h5>
+                                <p style="color: #616161;">Average Earning</p>
+                            </center>
+                        </div>
+                        <div class="small-box">
+                            <center>
+                                <h5 style="color: white;">100%</h5>
+                                <p style="color: #616161;">Bid Success</p>
+                            </center>
+                        </div>
+                        <div class="small-box">
+                            <center>
+                                <h5 style="color: white;">1</h5>
+                                <p style="color: #616161;">Active Bids</p>
+                            </center>
+                        </div>
+                        <div class="small-box">
+                            <center>
+                                <h5 style="color: white;">2</h5>
+                                <p style="color: #616161;">Contracts</p>
+                            </center>
+                        </div>
+                        <div class="small-box">
+                            <center>
+                                <h5 style="color: white;">0</h5>
+                                <p style="color: #616161;">Contracts Completed</p>
+                            </center>
+                        </div>
+                        <div class="col">
+                            <button class="view">View Contracts</button>
+                            <button class="create">Create Contract</button>
+                        </div>
 
-
-
+                    </center>
                 </div>
-
             </div>
 
-            
+
 
         </div>
+
+    </div>
+
+
+
+</div>
 
         <!--End of News-->
 
