--- a/business-pages/businessDashboard.html
+++ b/business-pages/businessDashboard.html
@@ -153,7 +153,7 @@
                     <div class="d-flex justify-content-center">
                         <div class="col">
                             <center>
-                                <h1 style="color: white; margin-top: 10%;">JD Farms</h1>
+                                <h1 style="color: white; margin-top: 10%;">JD Eats</h1>
                                 <div style="height: 20px;"></div>
                                 <div class="small-box">
                                     <center>
