--- a/pages/farmerDashboard.html
+++ b/pages/farmerDashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmerce</title>
+    <title>Farmer Portal</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/farmerDashboard.css">
@@ -143,7 +143,7 @@
                         </div>
                         <div class="small-box">
                             <center>
-                                <h5 style="color: white;">$592</h5>
+                                <h5 style="color: white;">$1,192</h5>
                                 <p style="color: #616161;">Average Earning</p>
                             </center>
                         </div>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="small-box">
                             <center>
-                                <h5 style="color: white;">2</h5>
+                                <h5 style="color: white;">1</h5>
                                 <p style="color: #616161;">Contracts</p>
                             </center>
                         </div>
