--- a/business-pages/businessDashboard.html
+++ b/business-pages/businessDashboard.html
@@ -38,7 +38,10 @@
                         </div>
 
                         <div class="icon2 select">
-                            <i class="lni lni-cart"></i>
+
+                            <a href="../pages/businessStore.html" style="color: #505050;">
+                                <i class="lni lni-cart"></i></a>
+                            
 
                         </div>
 
