--- a/pages/businessStore.html
+++ b/pages/businessStore.html
@@ -38,7 +38,10 @@
                         <div class="icon1 select" style="margin-top: 30px;">
                             <div style="height: 30px;"></div>
 
-                            <i class="lni lni-home"></i>
+                            <a href="../business-pages/businessDashboard.html" style="color:#505050">
+                                <i class="lni lni-home"></i>
+                            </a>
+
     
                         </div>
     
