--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
 
     <!-- Button -->
 
-    <button class="button">
+    <a href="/pages/login.html">
+      <button class="button">
         Get Started
 
-    </button>
+    </button></a>
 
     <style>
         .button {
