--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     <!--End Image-->
 
     <!-- Text-->
-    <p style="width: 900px; color: white; margin-top: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-         Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+    <p style="width: 900px; color: white; margin-top: 15px;">Getting food from the source before it’s altered and drenched with chemicals is best. It is much easier to walk into Safeway or Costco and have everything you could want in front of you. We are here to change that and simplify getting fresh local food. Not only would you be doing your body a favor, but you would also be saving farmers from terrible contracts and large never-ending debts. This also makes sure that all farmers have one platform where they are able to sell their crops and the customer has easy access to getting all the fresh good they want. </p>
 
     <!-- End of Text -->
 
