--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Login</a>
+                <a class="nav-link" aria-current="page" href="/pages/login.html">Login</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">SignUp</a>
-              </li>
+              
              
             </ul>
           </div>
